# icon-font-subset-plugin

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  PUBLISHING.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build-and-publish.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/davidmedenjak/fontsubsetting/: AnimatedVariableFont.kt  MainActivity.kt  PathIconDemo.kt  VariableFontLoader.kt  VariableFontShowcase.kt
app/src/main/java/com/davidmedenjak/fontsubsetting/ui/theme/: Theme.kt  Type.kt
app/src/main/res/values/: themes.xml
benchmark/: build.gradle.kts
benchmark/src/androidTest/java/com/davidmedenjak/fontsubsetting/benchmark/: IconDrawingBenchmark.kt  VectorDrawableBenchmark.kt
benchmark/src/main/res/drawable/: ic_done_all.xml  ic_home.xml
compose-glyphs/: README.md  build.gradle.kts  gradle.properties  proguard-rules.pro  settings.gradle.kts
compose-glyphs/src/main/cpp/: CMakeLists.txt  font_path_extractor.cpp  font_path_jni.cpp
compose-glyphs/src/main/kotlin/com/davidmedenjak/compose/glyphs/: FontPathExtractor.kt  GlyphPathUtils.kt  PathIcon.kt
demo/: build.gradle.kts
demo/src/main/: AndroidManifest.xml
demo/src/main/java/com/davidmedenjak/fontsubsetting/: AnimatedVariableFont.kt  FontSizeUtil.kt  Glyph.kt  MainActivity.kt  VariableFontConfig.kt  VariableFontLoader.kt
demo/src/main/java/com/davidmedenjak/fontsubsetting/ui/theme/: Color.kt  Theme.kt  Type.kt
demo/src/main/res/values/: strings.xml
font-subsetting/: build.gradle.kts  settings.gradle.kts
font-subsetting/font-subsetting-plugin/: Dockerfile.cross-compile  build-all-natives.sh  build.gradle.kts
font-subsetting/font-subsetting-plugin/cmake/toolchains/: darwin-aarch64.cmake  darwin-x86_64.cmake  windows-x86_64.cmake
font-subsetting/font-subsetting-plugin/src/main/cpp/: CMakeLists.txt  font_io.h  font_metrics.cpp  font_metrics.h  font_subsetter.cpp  font_subsetter.h  fontsubsetting.map  fontsubsetting.symbols  fontsubsetting_jni.cpp  harfbuzz_wrappers.h  logging.cpp  logging.h
font-subsetting/font-subsetting-plugin/src/main/kotlin/com/davidmedenjak/fontsubsetting/analyzer/: KotlinIconUsageAnalyzer.kt
font-subsetting/font-subsetting-plugin/src/main/kotlin/com/davidmedenjak/fontsubsetting/native/: HarfBuzzSubsetter.kt
font-subsetting/font-subsetting-plugin/src/main/kotlin/com/davidmedenjak/fontsubsetting/plugin/: AnalyzeIconUsageTask.kt  Constants.kt  FontConfiguration.kt  FontInfoTask.kt  FontReportTask.kt  FontSubsetTask.kt  FontSubsettingExtension.kt  FontSubsettingPlugin.kt  FontSubsettingTask.kt  GenerateIconConstantsTask.kt  NativeSubsetterFactory.kt  UsageData.kt
font-subsetting/font-subsetting-plugin/src/main/kotlin/com/davidmedenjak/fontsubsetting/plugin/services/: KotlinCodeGenerator.kt  KotlinNamingService.kt
font-subsetting/font-subsetting-plugin/src/main/kotlin/com/davidmedenjak/fontsubsetting/plugin/tasks/: AnalyzeIconUsageTask.kt  FontSubsettingTask.kt
font-subsetting/font-subsetting-plugin/src/main/resources/native/darwin-aarch64/: libfontsubsetting.dylib
font-subsetting/font-subsetting-plugin/src/main/resources/native/darwin-x86_64/: libfontsubsetting.dylib
font-subsetting/font-subsetting-runtime/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
font-subsetting/font-subsetting-runtime/src/main/cpp/: CMakeLists.txt  font_path_extractor.cpp  font_path_extractor.h  font_path_jni.cpp
font-subsetting/font-subsetting-runtime/src/main/kotlin/com/davidmedenjak/fontsubsetting/runtime/: FontPathExtractor.kt  GlyphPathUtils.kt  PathIcon.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
plugin/: .dockerignore  Dockerfile.cross-compile  build-all-natives.sh  build-in-docker.sh  build.gradle.kts  gradle.properties  settings.gradle.kts
plugin/cmake/toolchains/: darwin-aarch64.cmake  linux-aarch64.cmake  linux-x86_64.cmake  windows-x86_64.cmake
plugin/src/main/cpp/: CMakeLists.txt  font_io.cpp  font_metrics.cpp  font_metrics.h  font_subsetter.cpp  fontsubsetting.map  fontsubsetting.symbols  fontsubsetting_jni.cpp  jni_exports.h  jni_utils.cpp  jni_utils.h  logging.cpp  logging.h
plugin/src/main/kotlin/com/davidmedenjak/fontsubsetting/analyzer/: IconReferenceVisitor.kt  IconUsageResult.kt  KotlinAnalysisWorkerAction.kt  KotlinIconUsageAnalyzer.kt  PsiEnvironmentFactory.kt
plugin/src/main/kotlin/com/davidmedenjak/fontsubsetting/native/: HarfBuzzSubsetter.kt
plugin/src/main/kotlin/com/davidmedenjak/fontsubsetting/plugin/: AxisConfiguration.kt  Constants.kt  FontConfiguration.kt  FontSubsettingExtension.kt  FontSubsettingPlugin.kt  NativeSubsetterFactory.kt
plugin/src/main/kotlin/com/davidmedenjak/fontsubsetting/plugin/providers/: CodepointsFileProvider.kt  IconMappingProvider.kt
plugin/src/main/kotlin/com/davidmedenjak/fontsubsetting/plugin/services/: KotlinCodeGenerator.kt  KotlinNamingService.kt
plugin/src/main/kotlin/com/davidmedenjak/fontsubsetting/plugin/tasks/: AnalyzeIconUsageTask.kt  FontSubsettingTask.kt  GenerateIconConstantsTask.kt
plugin/src/test/kotlin/com/davidmedenjak/fontsubsetting/native/: HarfBuzzSubsetterEdgeCaseTest.kt  HarfBuzzSubsetterIntegrationTest.kt  HarfBuzzSubsetterSubsetTest.kt  HarfBuzzSubsetterValidationTest.kt  NativeLibraryGuardTest.kt
plugin/src/test/kotlin/com/davidmedenjak/fontsubsetting/plugin/tasks/: FontSubsettingNamingTest.kt
runtime/: build.gradle.kts  consumer-rules.pro
runtime/src/main/cpp/: CMakeLists.txt  glyph_extractor.c  glyph_extractor.h  glyph_extractor_jni.c
runtime/src/main/kotlin/com/davidmedenjak/fontsubsetting/runtime/: FontVariation.kt  Glyph.kt  GlyphAnimation.kt  GlyphFont.kt  GlyphPainter.kt  HarfBuzzGlyphExtractor.kt
